--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,12 @@ apply plugin: 'application'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 
+
+
 version = '1.0.' + (System.getenv('BUILD_NUMBER') ?: 0)
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
-mainClassName = "org.django.acquatorbida.CommandLineLauncher"
+mainClassName = "org.django.acquabooks.CommandLineLauncher"
 
 
 //Get dependencies from Maven central repository
@@ -25,6 +27,8 @@ dependencies {
   compile 'commons-cli:commons-cli:1.3.1'
   compile 'io.searchbox:jest:0.1.6'
   compile 'org.apache.commons:commons-lang3:3.4'
+  compile 'org.apache.poi:poi:3.12'
+  compile 'commons-beanutils:commons-beanutils:1.9.2'
   //dipendenza utile qualora si voleese dare veste grafia a tutto stle ncurses
   //compile 'com.baulsupp.kolja:jcurses:0.9.5.3'
 }
@@ -36,4 +40,3 @@ jar {
         attributes 'Main-Class': mainClassName
     }
 }
- 
