--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,11 @@ apply plugin: 'idea'
 
 
 
-version = '1.0.' + (System.getenv('BUILD_NUMBER') ?: 0)
+version = '0.1.' + (System.getenv('BUILD_NUMBER') ?: 0)
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 mainClassName = "org.django.acquabooks.CommandLineLauncher"
+//mainClassName = "org.django.acquabooks.io.Console"
 
 
 //Get dependencies from Maven central repository
